-- ircd-hybrid-8.1.0beta3 Release Notes
o) PCRE support has been dropped
o) "STATS o" now shows how many times an oper{} block has been used.
   Similar to STATS x|q"
o) Implemented channel mode +c. Known from other ircds, this mode basically
   prevents users from sending messages including control codes to a channel
   that has this mode set


-- ircd-hybrid-8.1.0beta2 Release Notes
o) Fixed broken compile with libGeoIP disabled
o) Code cleanups; working towards stabilization and improved performance
o) Changed RPL_WELCOME to comply with rfc2812
o) Removed operflag 'nick_changes'. Operators can now set +n at will
o) Fixed shared{} blocks not working as expected
o) Fixed spoofs not working as expected


-- ircd-hybrid-8.1.0beta1 Release Notes
########################################################################
o) IMPORTANT: name/channel entries can't be stacked any longer within
   a single resv{} block. Each entry now requires its own resv{} block.
   Read doc/reference.conf for more details
#######################################################################
o) Added resv::exempt configuration option. Exempt can be either a
   ISO 3166 alpha-2 two letter country code, or a nick!user@host mask.
   CIDR is supported
o) Removed channel::restrict_channels configuration option
o) Preliminary libGeoIP support. Currently only used for exempt entries
   in resv{} blocks
o) Improved WEBIRC authentication; added 'webirc' to auth::flags.
   A "webirc." spoof is now no longer required
o) Implemented new memory pool allocator which basically is based upon Tor's
   mempool allocator for Tor cells
o) Major code cleanups
o) Implemented new binary database storage for X-,D-,K-,G-Lines and RESVs.
   Temporary bans are now stored as well and will persist after a reboot
o) Channel based resv{} blocks may now contain wildcards
o) NICK/JOIN now shows the actual reason of reserved nick-/channelnames
o) contrib/ and its content has been removed from the tree