@@ -434,6 +434,10 @@ msg_channel(int p_or_n, const char *command, struct Client *client_p,
         sendto_one(source_p, form_str(ERR_NOCTRLSONCHAN),
                    ID_or_name(&me, client_p),
                    ID_or_name(source_p, client_p), chptr->chname, text);
+      else if (result == ERR_NEEDREGGEDNICK)
+        sendto_one(source_p, form_str(ERR_NEEDREGGEDNICK),
+                   ID_or_name(&me, client_p),
+                   ID_or_name(source_p, client_p), chptr->chname);
       else
         sendto_one(source_p, form_str(ERR_CANNOTSENDTOCHAN),
                    ID_or_name(&me, client_p),
