@@ -31,7 +31,7 @@ static const char *replies[] = {
 /* 001 RPL_WELCOME */ ":%s 001 %s :Welcome to the %s Internet Relay Chat Network %s!%s@%s",
 /* 002 RPL_YOURHOST */ ":%s 002 %s :Your host is %s, running version %s",
 /* 003 RPL_CREATED */ ":%s 003 %s :This server was created %s",
-/* 004 RPL_MYINFO */ ":%s 004 %s %s %s %s bciklmnoprstveIORS bkloveI",
+/* 004 RPL_MYINFO */ ":%s 004 %s %s %s %s bciklmnoprstveIMORS bkloveI",
 /* 005 RPL_ISUPPORT */ ":%s 005 %s %s :are supported by this server",
 /* 006 */ NULL,
 /* 007 */ NULL,
